deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
      - name: todoapp
        image: odl1986716.azurecr.io/todoapp:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: odl-candidate-sandbox-02-1986716
    service.beta.kubernetes.io/azure-load-balancer-ip: backend-lb-ip
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: todoapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - todoapp.pwwizexercise.com
    secretName: todoapp-tls
  rules:
  - host: todoapp.pwwizexercise.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todoapp
            port:
              number: 8080
